added milo note

--- a/milo.html
+++ b/milo.html
@@ -94,6 +94,8 @@ document.addEventListener('DOMContentLoaded', function () {
             <p>Milo Treats was a DTC startup in which I was the lead designer in charge of all brand collateral. Their unfair advantage was to be the only pet supplement brand that developed custom treats tailored to your dog and their unique lifestyle.
                 <br><br>
                 I designed the visual identity to be refined, playful, but above all else trustworthy to fellow dog owners who want what’s best for their pups. With a playful color scheme and a memorable logo mark, the brand and its application intentionally toes the line between fun and function.
+                <br><br>
+                Note: This project is a brand refresh of the original brand after deciding to revisit and refine old assets.
             </p>
             <br><br>
             </div>
