updated milo text

--- a/milo.html
+++ b/milo.html
@@ -95,7 +95,7 @@ document.addEventListener('DOMContentLoaded', function () {
                 <br><br>
                 I designed the visual identity to be refined, playful, but above all else trustworthy to fellow dog owners who want what’s best for their pups. With a playful color scheme and a memorable logo mark, the brand and its application intentionally toes the line between fun and function.
                 <br><br>
-                Note: This project is a brand refresh of the original brand after deciding to revisit and refine old assets.
+                Note: This project is a refresh of the original brand after I decided to revisit and refine old assets.
             </p>
             <br><br>
             </div>
