--- a/antologi.html
+++ b/antologi.html
@@ -107,31 +107,33 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
     </div>
 </div>
-    <footer>
-        <div class="about-details">
-            <p>
-                I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious VC, and Pioneer Square Labs.
-                <br><br>
-              Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own passion projects, and looking for my next opportunity in visual and/or UX design.
-            </p>
-            <div class="column">
-              <p>Freelance
-                <br>Remote
-                <br>2024 - present
-                <br><br>
-                Experience Designer
-                <br>September Works
-                <br>2021 - 2024
-                <br><br>
-                UX Research Assistant
-                <br>University of Washington
-                <br>2018 - 2021
-              </p>
-            </div>
-            <div class="column">
-              <img src="images/me.png" width="250" height="250">
-            </div>
-          </div>
-</footer>
+<footer>
+    <div class="about-details">
+      <p>
+        I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious VC, and Pioneer Square Labs.
+        <br><br>
+        Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own passion projects, and looking for my next opportunity in visual and/or UX design.
+        <br><br>
+        This site was coded from scratch with basic HTML, CSS, and a little bit of JavaScript. Typefaces used are Instrument Serif and Instrument Sans.
+      </p>
+      <div class="column">
+        <p>Freelance
+          <br>Remote
+          <br>2024 - present
+          <br><br>
+          Experience Designer
+          <br>September Works
+          <br>2021 - 2024
+          <br><br>
+          UX Research Assistant
+          <br>University of Washington
+          <br>2018 - 2021
+        </p>
+      </div>
+      <div class="column">
+        <img src="images/me.png" width="250" height="250">
+      </div>
+    </div>
+  </footer>
     </body>
  </html>
