--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ document.addEventListener('DOMContentLoaded', function () {
         </section>
     </nav>
 </header>
-  <h1 id="intro" class="desktop">Shelley Tsui is a designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Currently freelancing for start-ups.</h1>
-  <h1 id="intro" class="mobile">Shelley Tsui is a designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently freelancing for start-ups.</h1>
+  <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">BuildFire</a>.</h1>
+  <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">BuildFire</a>.</h1>
   <div class="project-grid">
     <a href="antologi.html">
     <div class="project-item1">
@@ -160,24 +160,24 @@ document.addEventListener('DOMContentLoaded', function () {
 <footer>
   <div class="about-details">
     <p>
-      I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious VC, and Pioneer Square Labs.
+      I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious, and Pioneer Square Labs.
       <br><br>
-      Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own passion projects, and looking for my next opportunity in visual and/or UX design.
+      Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m the Product and Design Lead at Curious and Head of Product at BuildFire helping design the future of app creation.
       <br><br>
       This site was coded from scratch with basic HTML, CSS, and a little bit of JavaScript. Typefaces used are Instrument Serif and Instrument Sans.
     </p>
     <div class="column">
-      <p>Freelance
-        <br>Remote
+      <p>Head of Product
+        <br>BuildFire
+        <br>2024 - present
+        <br><br>
+        Product and Design Lead
+        <br>Curious
         <br>2024 - present
         <br><br>
         Experience Designer
         <br>September Works
         <br>2021 - 2024
-        <br><br>
-        UX Research Assistant
-        <br>University of Washington
-        <br>2018 - 2021
       </p>
     </div>
     <div class="column">
