--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
     <div class="column">
-      <p>Selected Clients<br>
+      <p>Selected Clients<br><br>
         Microsoft Security<br>
         Google's Area 120<br>
         Amazon DDG<br>
