--- a/mixedreality.html
+++ b/mixedreality.html
@@ -131,8 +131,16 @@ document.addEventListener('DOMContentLoaded', function () {
         </p>
       </div>
       <div class="column">
-        <img src="images/me.png" width="250" height="250">
-      </div>
+        <p>Selected Clients<br><br>
+          Microsoft Security<br>
+          Google's Area 120<br>
+          Amazon DDG<br>
+          Thrive Global<br>
+          Promethean<br>
+          Pioneer Square Labs<br>
+          Fortive + Operating Companies<br>
+          </p>
+        </div>
     </div>
   </footer>
     </body>
