--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </section>
     </nav>
 </header>
-  <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">BuildFire</a>.</h1>
+  <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
   <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">BuildFire</a>.</h1>
   <div class="project-grid">
     <a href="antologi.html">
@@ -162,13 +162,13 @@ document.addEventListener('DOMContentLoaded', function () {
     <p>
       I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious, and Pioneer Square Labs.
       <br><br>
-      Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m the Product and Design Lead at Curious and Head of Product at BuildFire helping design the future of app creation.
+      Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m the Product and Design Lead at Curious and Head of Product at Buildfire helping design the future of app creation.
       <br><br>
       This site was coded from scratch with basic HTML, CSS, and a little bit of JavaScript. Typefaces used are Instrument Serif and Instrument Sans.
     </p>
     <div class="column">
       <p>Head of Product
-        <br>BuildFire
+        <br>Buildfire
         <br>2024 - present
         <br><br>
         Product and Design Lead
@@ -182,11 +182,11 @@ document.addEventListener('DOMContentLoaded', function () {
     </div>
     <div class="column">
       <p>Selected Clients<br><br>
-        Microsoft Security<br>
-        Google's Area 120<br>
-        Amazon DDG<br>
-        Thrive Global<br>
-        Promethean<br>
+        Microsoft Security with September Works<br>
+        Google's Area 120 with September Works<br>
+        Amazon DDG with September Works<br>
+        Thrive Global with September Works<br>
+        Promethean with September Works<br>
         Pioneer Square Labs<br>
         Fortive + Operating Companies<br>
         </p>
