--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ document.addEventListener('DOMContentLoaded', function () {
 <footer>
   <div class="about-details">
     <p>
-      I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious, and Pioneer Square Labs.
+      I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed.
       <br><br>
       Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m the Product and Design Lead at Curious and Head of Product at Buildfire helping design the future of app creation.
       <br><br>
@@ -182,11 +182,11 @@ document.addEventListener('DOMContentLoaded', function () {
     </div>
     <div class="column">
       <p>Selected Clients<br><br>
-        Microsoft Security with September Works<br>
-        Google's Area 120 with September Works<br>
-        Amazon DDG with September Works<br>
-        Thrive Global with September Works<br>
-        Promethean with September Works<br>
+        Microsoft Security + September Works<br>
+        Google's Area 120 + September Works<br>
+        Amazon DDG + September Works<br>
+        Thrive Global + September Works<br>
+        Promethean + September Works<br>
         Pioneer Square Labs<br>
         Fortive + Operating Companies<br>
         </p>
