--- a/index.html
+++ b/index.html
@@ -181,15 +181,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
     <div class="column">
-      <p>Selected Clients<br><br>
-        Microsoft Security + September Works<br>
-        Google's Area 120 + September Works<br>
-        Amazon DDG + September Works<br>
-        Thrive Global + September Works<br>
-        Promethean + September Works<br>
-        Pioneer Square Labs<br>
-        Fortive + Operating Companies<br>
-        </p>
+      <img src="images/on-the-computer.png" width=200px height=200px>
       </div>
   </div>
 </footer>
