--- a/milo.html
+++ b/milo.html
@@ -139,15 +139,7 @@ document.addEventListener('DOMContentLoaded', function () {
         </p>
       </div>
       <div class="column">
-        <p>Selected Clients<br><br>
-          Microsoft Security<br>
-          Google's Area 120<br>
-          Amazon DDG<br>
-          Thrive Global<br>
-          Promethean<br>
-          Pioneer Square Labs<br>
-          Fortive + Operating Companies<br>
-          </p>
+        <img src="images/on-the-computer.png" width=200px height=200px>
         </div>
     </div>
   </footer>
