--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ document.addEventListener('DOMContentLoaded', function () {
     </nav>
 </header>
   <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
-  <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">BuildFire</a>.</h1>
+  <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
   <div class="project-grid">
     <a href="antologi.html">
     <div class="project-item1">
