--- a/index.html
+++ b/index.html
@@ -83,34 +83,33 @@ document.addEventListener('DOMContentLoaded', function () {
         </section>
     </nav>
 </header>
-  <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
+  <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue" id="curious">Curious</a> and Head of Product at <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
   <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
   <div class="project-grid">
-    <a href="antologi.html">
-    <div class="project-item1">
-      <p class="project-text">Antologi<br><span class="low-op">Product Design</span></p>
-      <img src="antologi-images/antolog-logo.png">
-    </div>
-  </a>
+    <a href="/">
+      <div class="project-item4">
+        <p class="project-text">Buildfire<br><span class="low-op">Head of Product</span></p>
+        <img src="images/buildfire.png">
+      </div>
+      </a>
+      <a href="milo.html">
+        <div class="project-item3">
+          <p class="project-text">Milo Treats<br><span class="low-op">Visual Identity</span></p>
+          <img src="images/milo-treats.png">
+        </div>
+        </a>
   <a href="envisioning.html">
     <div class="project-item2">
       <p class="project-text">Envisioning Projects<br><span class="low-op">North Star Ideation</span></p>
       <img src="images/envisioning.png">
     </div>
     </a>
-    <a href="milo.html">
-    <div class="project-item3">
-      <p class="project-text">Milo Treats<br><span class="low-op">Visual Identity</span></p>
-      <img src="images/milo-treats.png">
-
-    </div>
-    </a>
-    <a href="mixedreality.html">
-    <div class="project-item4">
-      <p class="project-text">Mixed Reality Dev Days<br><span class="low-op">Visual Identity</span></p>
-      <img src="images/mrdd.png">
-    </div>
-    </a>
+    <a href="/">
+      <div class="project-item4">
+        <p class="project-text">Hearitage<br><span class="low-op">Passion Project</span></p>
+        <img src="images/hearitage.png">
+      </div>
+      </a>
   </div>
   <div>
     <div class="container">
