--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ document.addEventListener('DOMContentLoaded', function () {
   <div class="about-details">
     <p>
       Shelley Tsui graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. She has learned to acknowledge and embrace the design process as fluid, never fixed.  
-      <br><br>  
-      Most recently, she obtained a certificate in front-end development as a complement to her design skills. Currently, she serves as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.  
+      <br><br>
+      Currently, she serves as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.  
       <br><br>  
       This site was coded from scratch using basic HTML, CSS, and a little bit of JavaScript. The typefaces used are Instrument Serif and Instrument Sans.  
     </p>
