--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <p>
       Shelley Tsui graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. She has learned to acknowledge and embrace the design process as fluid, never fixed.  
       <br><br>
-      Currently, she serves as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.  
+      During her career she's had the pleasure of collaborating with a variety of clients from Microsoft and Google to startups in YC. She enjoyed every single one. Currently, she serves as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.  
       <br><br>  
       This site was coded from scratch using basic HTML, CSS, and a little bit of JavaScript. The typefaces used are Instrument Serif and Instrument Sans.  
     </p>
