--- a/index.html
+++ b/index.html
@@ -85,19 +85,87 @@ document.addEventListener('DOMContentLoaded', function () {
 </header>
   <h1 id="intro" class="desktop">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Product and Design Lead at <a href="https://curious.vc/" target="_blank" class="italic-blue" id="curious">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
   <h1 id="intro" class="mobile">Shelley Tsui is based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently at <a href="https://curious.vc/" target="_blank" class="italic-blue">Curious</a> and <a href="https://buildfire.com/" target="_blank" class="italic-blue">Buildfire</a>.</h1>
+  <div class="project-grid">
+    <a href="/">
+      <div class="project-item4">
+        <p class="project-text">Buildfire<br><span class="low-op">Head of Product</span></p>
+        <img src="images/buildfire.png">
+      </div>
+      </a>
+      <a href="milo.html">
+        <div class="project-item3">
+          <p class="project-text">Milo Treats<br><span class="low-op">Visual Identity</span></p>
+          <img src="images/milo-treats.png">
+        </div>
+        </a>
+  <a href="envisioning.html">
+    <div class="project-item2">
+      <p class="project-text">Envisioning Projects<br><span class="low-op">North Star Ideation</span></p>
+      <img src="images/envisioning.png">
+    </div>
+    </a>
+    <a href="/">
+      <div class="project-item4">
+        <p class="project-text">Hearitage<br><span class="low-op">Passion Project</span></p>
+        <img src="images/hearitage.png">
+      </div>
+      </a>
+  </div>
   <div>
+    <div class="container">
+      <div class="accordion">
+        <a href="rhody.html">
+          <div class="grid-item1">RSBG</div>
+          <div class="grid-item2">Rebranding the Rhododendren Species Botanical Garden</div>
+          <div class="grid-item3">Visual Identity</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
+        <a href="caregoals.html">
+          <div class="grid-item1">Care Goals Guide</div>
+          <div class="grid-item2">Supporting patients with cancer in goals of care discussions</div>
+          <div class="grid-item3">UX Research</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
+        <a href="assets/Tsui_Shelley_Final_Nonimpositioned.pdf" target="blank">
+          <div class="grid-item1">Unsent Letters</div>
+          <div class="grid-item2">Compiling letters that were never sent or never had the chance to be</div>
+          <div class="grid-item3">Publication Design</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
+        <a href="https://animalcrossingchecklist.netlify.app/" target="blank">
+          <div class="grid-item1">Animal Crossing List</div>
+          <div class="grid-item2">Providing Animal Crossing players with means to track their progress</div>
+          <div class="grid-item3">Front-End Development & Design</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
+        <a href="https://figmastalker.netlify.app/" target="blank">
+          <div class="grid-item1">Figma Stalker</div>
+          <div class="grid-item2">Recreating the experience of being followed in Figma</div>
+          <div class="grid-item3">Front-End Development & Design</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 <footer>
   <div class="about-details">
     <p>
-      Shelley Tsui graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. She has learned to acknowledge and embrace the design process as fluid, never fixed.  
+      I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed.
       <br><br>
-      During her career she's had the pleasure of collaborating with a variety of clients from Microsoft and Google to startups in YC. She enjoyed every single one. Currently, she serves as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.  
-      <br><br>  
-      This site was coded from scratch using basic HTML, CSS, and a little bit of JavaScript. The typefaces used are Instrument Serif and Instrument Sans.  
+      During my time at September Works I had the pleasure of collaborating with a variety of clients from Microsoft and Google to startups in YC. Currently I serve as the Product and Design Lead at Curious and Buildfire, helping design the future of app creation.
+      <br><br>
+      This site was coded from scratch with basic HTML, CSS, and a little bit of JavaScript. Typefaces used are Instrument Serif and Instrument Sans.
     </p>
-        <div class="column">
+    <div class="column">
       <p>Product and Design Lead
         <br>Buildfire
         <br>2024 - present
